# Soongsil-MCP

./: .gitignore  README.md
.github/workflows/: deploy-worker.yml
knowledge/normalized-md/: README.md  교양 선택.md  교양 필수.md  학사 일정.md  학점 이수 체계.md  학칙.md  학칙.table-normalized.md
knowledge/raw-md/: README.md  학칙.raw.md
mcp/soongsil-mcp/: README.md  pyproject.toml  server.py
mcp/soongsil-mcp-worker/: Cargo.toml  README.md  package-lock.json  package.json  wrangler.jsonc  wrangler.toml
mcp/soongsil-mcp-worker/scripts/: sync-assets.mjs
mcp/soongsil-mcp-worker/src/: index.ts  lib.rs
mcp/soongsil-mcp/references/: input-template.md  law-articles.md  law-numeric-rules.md  law-topic-index.md  md-corpus.md  normalization-checklist.md  normalization-rules.md  normalization-template.md  qa-checklists.md  source-map.md
mcp/soongsil-mcp/scripts/: convert_pdfs_to_md.py  pdf_page_search.py
mcp/soongsil-mcp/soongsil_mcp.egg-info/: PKG-INFO  SOURCES.txt
