[package]
name = "soongsil-mcp-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.7.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
